--- a/TPweb3/Cocinero.Master
+++ b/TPweb3/Cocinero.Master
@@ -4,10 +4,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link href="content/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
-<link href="content/css/style.css" rel="stylesheet" media="screen"/>
-<script src="scripts/bootstrap.min.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="content/css/bootstrap.min.css" rel="stylesheet" media="screen" />
+    <link href="content/css/style.css" rel="stylesheet" media="screen" />
+    <script src="scripts/bootstrap.min.js"></script>
 
     <title>APP web3</title>
 
@@ -15,31 +15,39 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Cocinero</a>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="../home.aspx">MasterChuf</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">Perfil</a>
+                    </li>
+                    <li>
+                        <a href="#">Crear receta</a>
+                    </li>
+                    <li>
+                        <a href="#">Crear evento</a>
+                    </li>
+                    <li>
+                        <a href="#">Cerrar sesión</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Perfil</a></li>
-            <li class="active"><a href="#">Crear receta</a></li>
-            <li class="active"><a href="#">Crear evento</a></li>
-          </ul>
-        </div>
-      </div>
     </nav>
- 
+
     <div class="container">
         <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
+            <asp:ContentPlaceHolder ID="ContentPlaceHolderBody" runat="server">
             </asp:ContentPlaceHolder>
         </div>
     </div>
