--- a/TPweb3/Default.Master
+++ b/TPweb3/Default.Master
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server">
+<head id="Head1" runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link href="content/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 <link href="content/css/style.css" rel="stylesheet" media="screen"/>
@@ -15,6 +15,24 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="home.aspx">MasterChuf</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="login.aspx">Ingresar</a>
+                    </li>
+                    <li>
+                        <a href="join.aspx">Registrarse</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <form id="form1" runat="server">
     <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolderBody" runat="server">
@@ -22,6 +40,7 @@
         </asp:ContentPlaceHolder>
     </div>
     </form>
+
     <div class="pie">
         Programación web 3 - Velazco, Murano, Calvo, Buzarquis
     </div>
