--- a/TPweb3/content/css/style.css
+++ b/TPweb3/content/css/style.css
@@ -7,3 +7,15 @@ body{
     text-align: center;
     margin-top: 40px;
 }
+
+.center {
+    text-align: center;
+}
+.input-log {
+    width: 40em;
+}
+.tablaComentarios {
+    padding-top: 10px;
+    padding-left: 80px;
+    padding-right: 80px;
+}
