--- a/TPweb3/Cocinero.Master
+++ b/TPweb3/Cocinero.Master
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Perfil</a>
+                        <a href="perfil.aspx">Perfil</a>
                     </li>
                     <li>
-                        <a href="#">Crear receta</a>
+                        <a href="receta.aspx">Crear receta</a>
                     </li>
                     <li>
                         <a href="#">Crear evento</a>
