Login -  Tablas de perfil de cocinero
Si completas con cocinero o comensal en el dato email del login te
direcciona automaticamente a su correspondiente pag.

--- a/TPweb3/Cocinero.Master
+++ b/TPweb3/Cocinero.Master
@@ -45,14 +45,10 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolderBody" runat="server">
             </asp:ContentPlaceHolder>
-        </div>
-    </div>
 
-    <div class="pie">
+    <div class="pie container">
         Programación web 3 - Velazco, Murano, Calvo, Buzarquis
     </div>
 </body>
