--- a/TPweb3/Comensal.Master
+++ b/TPweb3/Comensal.Master
@@ -24,18 +24,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.aspx">MasterChuf</a>
+                <a class="navbar-brand" href="../home.aspx">MasterChuf</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Mis reservas</a>
+                        <a href="perfil.aspx">Mis reservas</a>
                     </li>
                     <li>
-                        <a href="#">Reservar</a>
+                        <a href="reservar.aspx">Reservar</a>
                     </li>
                     <li>
-                        <a href="#">Cerrar sesión</a>
+                        <a href="../home.aspx">Cerrar sesión</a>
                     </li>
                 </ul>
             </div>
