--- a/TPweb3/content/css/style.css
+++ b/TPweb3/content/css/style.css
@@ -2,6 +2,7 @@ body{
     font-family: "Helvetica","Verdana","Arial";
     padding-top: 50px;
     height: 100%;
+    background: url("../img/gorro_fondo.png");
 }
 .pie{
     text-align: center;
